# Nba_Stats_Tracker

./: .gitignore  CMakeLists.txt  README.md
include/analytics/: AggregatedStats.h  PlayerAggregateStats.h  StatsAggregator.h
include/models/: Game.h  Player.h  StatLine.h  Team.h
src/: main.cpp
src/analytics/: StatsAggregator.cpp
src/models/: Game.cpp  Player.cpp  Team.cpp
